--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,16 @@
-name: Python Test
+name: Shell Script
 
 on: [push]
 
 jobs:
-  test:
+  run-script:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: Install dependencies
+    - name: Run script
       run: |
-        python -m pip install --upgrade pip
-        # pip install -r requirements.txt
-    - name: Test
-      run: |
-        python -m pytest
+        echo "hello world ~"
+        uname -a
+      
+      
